bk_ida/gccida/c0/expand_function_start
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_function_start/src/function.c:6967:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v3; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_function_start/src/function.c:6968:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v4; // ecx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_function_start/src/function.c:6971:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v7; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_function_start/src/function.c:6979:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *pending_sizes; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_function_start/src/function.c:6980:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v16; // rax 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_function_start/src/function.c:6984:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+44h] [rbp-5Ch] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_function_start/src/function.c:6995:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tem; // [rsp+88h] [rbp-18h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_function_start/src/function.c:7041:21: error: use of undeclared identifier 'machine_mode'
v5 = gen_rtx_MEM( ( machine_mode)( unsigned __int8)subr->decl.result->real_cst.real_cst.r[2], value_address); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_function_start/src/function.c:7041:36: error: expected expression
v5 = gen_rtx_MEM( ( machine_mode)( unsigned __int8)subr->decl.result->real_cst.real_cst.r[2], value_address); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_function_start/src/function.c:7051:46: error: use of undeclared identifier 'machine_mode'
subr->decl.result->decl.rtl = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)hard_reg)); 
                                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_function_start/src/function.c:7051:61: error: expected expression
subr->decl.result->decl.rtl = gen_reg_rtx( ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)hard_reg)); 
                                                            ^
11 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/expand_function_start/src/obj/function.o] Error 1
